<resources>
    <string name="app_name">ReindeerMe</string>
    <string name="email_edittext_hint">E-mail</string>
    <string name="password_edittext_hint">Password</string>
    <string name="forget_password"><u>Forgot password?</u></string>
    <string name="not_a_user_yet"><u>Not a user yet? Register here!</u></string>
    <string name="login_btn">Login</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add_friend">Add Friend</string>
    <string name="search">Search..</string>
    <string name="sign_out">Sign out</string>
    <string name="online_state">Online</string>
    <string name="offline_state">Offline</string>
    <string name="you">You:</string>
    <string name="type_your_message">Type your message..</string>
    <string name="developed_by_amr_salah">Developed By: Amr Salah</string>
    <string name="photo">photo</string>
    <string name="deleted_msg">This message has been deleted.</string>
    <string name="type_an_email_to_search_for">Search for email..</string>
    <string name="add_new_friend">Add new Friend</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="unfriend">Unfriend</string>
    <string name="clear_chat">Clear chat history</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="accepted">ACCEPTED!</string>
    <string name="unfriend_confirmation">Are you sure you want to delete this friend?</string>
    <string name="confirm">Confirm</string>
    <string name="clear_chat_confirmation">Are you sure you want to clear this chat history?</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_acc_confirmation">Are you sure you want to delete your account?</string>
    <string name="reindeerme">ReindeerMe</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="type_a_valid_signin">Type a valid email and password first!</string>
    <string name="email_not_registered">This email is not registered.</string>
    <string name="welcome">Welcome!</string>
    <string name="sth_wrong_login">There is something wrong with your email or password</string>
    <string name="enter_valid_singup">Please enter valid details and a Password consists of at least 6 digits</string>
    <string name="already_registered">This email is already registered.</string>
    <string name="signup_failed">Sign up failed.</string>
    <string name="enter_an_email">Enter an email address!</string>
    <string name="no_such_email">No such email exists.</string>
    <string name="reset_sent">Reset link has been sent to your email.</string>
    <string name="error">Error with server.</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_connection">No internet connection</string>
    <string name="replying_to_urself">Replying to yourself</string>
    <string name="replying_to">Replying to</string>
    <string name="message_copied">Message copied</string>
    <string name="error_uploading">Error uploading:</string>
    <string name="error_retrieving_link">Error retrieving link</string>
    <string name="done">Done!</string>
    <string name="enter_a_valid_email">Enter a valid email address!</string>
</resources>
