<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amr.mineapps.reindeerme.AccSettingsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout_inAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/acc_settings_tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/AppTheme"
            app:title="@string/settings"
            app:titleTextColor="#FFFFFF" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/avatar_imageview"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:elevation="10dp"
        android:foreground="?selectableItemBackground"
        android:onClick="changeAvatar"
        android:src="@drawable/default_pp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="4dp"
        app:civ_shadow_color="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <Button
        android:id="@+id/signout_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#809E47FF"
        android:onClick="signOut"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <Button
        android:id="@+id/delete_acc_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="#809E47FF"
        android:onClick="deleteAcc"
        android:text="@string/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signout_btn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6593707" />

    <TextView
        android:id="@+id/display_name_in_settings_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="serif"
        android:shadowColor="#000000"
        android:shadowRadius="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/avatar_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout_inAcc"
        tools:text="@tools:sample/full_names" />

    <ProgressBar
        android:id="@+id/change_avatar_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_imageview"
        app:layout_constraintEnd_toEndOf="@+id/avatar_imageview"
        app:layout_constraintStart_toStartOf="@+id/avatar_imageview"
        app:layout_constraintTop_toTopOf="@+id/avatar_imageview" />


</androidx.constraintlayout.widget.ConstraintLayout>
